[package]
name = "cinyras"
version = "0.0.1"
authors = [ "PryosCode <info@pryoscode.net>" ]
edition = "2018"
description = "Cinyras is a high level general purpose interpreted scripting language with its own interpreter written in Rust."
documentation = "https://github.com/PryosCode/Cinyras/wiki"
readme = "README.md"
homepage = "https://github.com/PryosCode/Cinyras"
repository = "https://github.com/PryosCode/Cinyras"
license-file = "LICENSE"
keywords = [ "interpreter", "scripting-language", "rust" ]

[dependencies]
clap = "2.33.3"